# appfw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
cmake/: platform_info.cmake  toolchain_x86_64_linux_gnu_gcc9.cmake
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.cpp
examples/tcp_client/: CMakeLists.txt  main.cpp
examples/tcp_server/: CMakeLists.txt  main.cpp
include/appfw/: appfw.h  binary_buffer.h  binary_file.h  binary_stream.h  cmd_buffer.h  cmd_string.h  command_line.h  compiler.h  dbg.h  filesystem.h  init.h  platform.h  prof.h  sha256.h  span.h  str_utils.h  timer.h  unique_function.h  utils.h  windows.h
include/appfw/console/: con_item.h  con_msg.h  console_system.h  std_console.h  term_console.h
include/appfw/extcon/: consts.h  extcon_host.h
include/appfw/network/: datagram_parser.h  ip_address.h  sock_addr.h  socket.h  tcp_client4.h  tcp_server4.h
src/: appfw.cpp  binary_buffer.cpp  binary_file.cpp  binary_stream.cpp  cmd_buffer.cpp  cmd_string.cpp  command_line.cpp  dbg.cpp  filesystem.cpp  prof.cpp  sha256.cpp  span.natvis  str_utils.cpp  this_module_info.h.in  utils.cpp
src/console/: con_item.cpp  console_system.cpp  std_console.cpp
src/extcon/: extcon_host.cpp
src/network/: datagram_parser.cpp  plat_sockets.cpp  plat_sockets.h  sock_addr.cpp  socket.cpp  tcp_client4.cpp  tcp_server4.cpp
tests/: binary_buffer.cpp  platform.cpp  utils.cpp
tests/src/: binary_stream.cpp  cmd_string.cpp  command_line.cpp  filesystem.cpp
tests/workdir/filesystem/group2_path1/: file.txt
tests/workdir/filesystem/group2_path2/: file.txt
